# EPS32S3_LVGL

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/BSP/: CMakeLists.txt
components/BSP/ES8311/: es8311.h
components/BSP/LCD/: lcd_display.c  lcd_display.h
components/BSP/MYSPI/: my_spi.c
components/BSP/RTC/: esp_rtc.c  esp_rtc.h
components/BSP/SPI_SD/: spi_sd.h
components/BSP/TOUCH/: chsc5xxx.c  chsc5xxx.h  touch.c  touch.h
components/BSP/USART/: usart.h
components/Middlewares/MYFATFS/: exfuns.c
main/: CMakeLists.txt  idf_component.yml  main.c
main/APP/: esptim.h  image.c  image.h  lv_camera_ui.c  lv_camera_ui.h  lv_main_ui.h  lv_mian_ui.c  lv_photo_ui.c  lv_photo_ui.h  lv_start_ui.c  lv_start_ui.h  lv_test_ui.c  lv_test_ui.h  lv_video_ui.c  lv_video_ui.h  lvgl_demo.c  lvgl_demo.h
main/IMAGE/: Photo.c  camera.c  esp_logo.c  lv_usb.c  lv_video.c  lv_wifi.c
main/MANAGE/: bmp.c  bmp.h  jpeg.c  jpeg.h  manage.c  manage.h  mjpeg.c  piclib.h  png.c  png.h
